--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /firstCppProgram.exe
 /first_program.exe
-/fucntion.exe
+/function.exe
 /initializers.exe
 /input_output.exe
 /integer_modifiers.exe
