--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,16 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
-    }
+        "typeinfo": "cpp",
+        "ctime": "cpp",
+        "iomanip": "cpp"
+    },
+    "cSpell.words": [
+        "Anusuya",
+        "Dipak",
+        "Firstname",
+        "Ghosal",
+        "Lastname",
+        "Mithu"
+    ]
 }
