--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,4 @@
 /bound_of_array.exe
 # /declaring_and_using_pointers.exe
 /pointers/declaring_and_using_pointers.exe
-
+/pointers/pointer_to_char.exe
