--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 # /declaring_and_using_pointers.exe
 /pointers/declaring_and_using_pointers.exe
 /pointers/pointer_to_char.exe
+/dynamic_memory_allocation.exe
