init+update code

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /pointers/dynamic_arrays.exe
 /pointers/references.exe
 /pointers/compairing_reference_pointers.exe
+/pointers/references_and_const.exe
