--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /pointers/references.exe
 /pointers/compairing_reference_pointers.exe
 /pointers/references_and_const.exe
+/character_manipulation.exe
