--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /pointers/compairing_reference_pointers.exe
 /pointers/references_and_const.exe
 /character_manipulation.exe
+/C-string_manipulation.exe
