--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,7 +43,9 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "ctime": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "complex": "cpp",
+        "cstring": "cpp"
     },
     "cSpell.words": [
         "Anusuya",
