--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /pointers/references_and_const.exe
 /character_manipulation.exe
 /C-string_manipulation.exe
+C-string_concatination_and_copying.exe
